# fanatic-settlement

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/fanatic-settlement/: Cargo.toml
programs/fanatic-settlement/src/: errors.rs  lib.rs  state.rs  txline_cpi.rs
tests/: fanatic-settlement.ts
